AC_INIT([SAKEDB], [0.1.0])

AC_CONFIG_SRCDIR([cmd_protocol.h])
AC_CONFIG_AUX_DIR([build-aux])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])
AM_PROG_AR
AC_CONFIG_MACRO_DIR([m4])

AC_PROG_CC_C99
AC_C_INLINE
AC_HEADER_STDBOOL
AC_CHECK_HEADERS([limits.h inttypes.h])
AC_FUNC_MALLOC
AC_FUNC_MEMCMP
AC_FUNC_MMAP

AX_CFLAGS_WARN_ALL
AX_PTHREAD

PKG_CHECK_MODULES([cmocka], [cmocka >= 1.0.1])

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
